<resources>
    <string name="app_name">Kero Taxi</string>

    <string name="navigation_drawer_open">Abrir navegador</string>
    <string name="navigation_drawer_close">Fechar navegador</string>

    <string name="action_settings">Definições</string>
    <string name="title_activity_login">Log in</string>
    <string name="title_activity_signUp">Registar conta</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Palavra-passe</string>
    <string name="action_sign_in" translatable="false">Entrar</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_phone_num">Número de Telefone inválido</string>
    <string name="error_invalid_name">Nome inválido</string>
    <string name="error_invalid_password">Palavra-passe é demasiada pequena</string>
    <string name="error_no_match_password">Palavras-passes diferentes</string>
    <string name="error_incorrect_password">Palavra-passe incorrecta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Esqueceu a Palavra-passe?</string>
    <string name="register">Registar nova conta</string>

    <!-- Strings related to password recovery-->
    <string name="password_recovered_message">Enviamos um e-mail para o seu endereço de e-mail com um link para uma página de alteração de senha. Por favor, verifique seu e-mail e siga o link para obter mais instruções.</string>
    <string name="warning_icon_description">Alerta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Nome</string>
    <string name="phone_number">Telefone</string>
    <string name="submit">Submeter</string>
    <string name="dados"><u>Dados</u></string>
    <string name="classificacao">Classificação:</string>
    <string name="matricula">Matrícula:</string>
    <string name="modelo">Modelo:</string>
    <string name="marca">Marca:</string>
    <string name="viatura">Viatura</string>
    <string name="welcome">Bem vindo!</string>
    <string name="please_login">Faça o Login </string>
    <string name="user_profile">Perfil</string>
    <string name="modo_invisivel">Activar modo Invisível</string>
    <string name="login">Login</string>
    <string name="preferencias">Preferências</string>
    <string name="partilhar">Partilhar</string>
    <string name="about">Sobre a aplicação</string>
    <string name="hi">Olá,</string>
    <string name="user_name">[nome de usuário]</string>
    <string name="title_activity_show_passenger_details">ShowPassengerDetailsActivity</string>


</resources>
