<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@id/menu_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@mipmap/ic_menu_login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_edit_user"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="Editar sua informação" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="Ver histórico" />
    </group>


        <group android:id="@id/menu_2"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/preferencias" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/partilhar" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/ic_menu_logout"
                android:title="Sair" />
        </group>

</menu>
